--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-      "start": "node index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/oscarmorrison/nightmare-heroku",
   "dependencies": {
-    "electron": "^1.6.10",
-    "nightmare": "^2.10.0"
+    "electron": "^1.8.8",
+    "nightmare": "^2.10.0",
+    "telegraf": "^3.38.0"
   }
 }
