--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/oscarmorrison/nightmare-heroku",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "electron": "^1.8.8",
     "nightmare": "^2.10.0",
     "telegraf": "^3.38.0"
