--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
   "homepage": "https://github.com/oscarmorrison/nightmare-heroku",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "electron": "^8.2.4",
     "nightmare": "^2.10.0",
     "telegraf": "^3.38.0"
   },
-  "devDependencies": {
-    "electron": "^1.8.8"
-  }
+  "devDependencies": {}
 }
